--- a/src/main/java/capadeinterfaz/GestionMembresias.form
+++ b/src/main/java/capadeinterfaz/GestionMembresias.form
@@ -56,17 +56,17 @@
                       <EmptySpace min="80" pref="80" max="-2" attributes="0"/>
                       <Component id="btnCancelar" min="-2" pref="170" max="-2" attributes="0"/>
                       <EmptySpace min="190" pref="190" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="btnRegistrarEstado" min="-2" max="-2" attributes="0"/>
-                          <Group type="102" attributes="0">
-                              <Component id="cmbMembresia" min="-2" pref="120" max="-2" attributes="0"/>
-                              <EmptySpace min="190" pref="190" max="-2" attributes="0"/>
-                              <Component id="jLabel3" min="-2" pref="130" max="-2" attributes="0"/>
-                          </Group>
-                      </Group>
+                      <Component id="cmbMembresia" min="-2" pref="120" max="-2" attributes="0"/>
+                      <EmptySpace min="190" pref="190" max="-2" attributes="0"/>
+                      <Component id="jLabel3" min="-2" pref="130" max="-2" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace pref="58" max="32767" attributes="0"/>
+          </Group>
+          <Group type="102" alignment="1" attributes="0">
+              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+              <Component id="btnRegistrarEstado" min="-2" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="386" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -115,9 +115,9 @@
                   </Group>
                   <Component id="dcFechaVencimiento" min="-2" pref="40" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace min="-2" pref="14" max="-2" attributes="0"/>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="btnRegistrarEstado" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="48" max="32767" attributes="0"/>
+              <EmptySpace pref="44" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -293,7 +293,7 @@
     </Component>
     <Component class="javax.swing.JButton" name="btnRegistrarEstado">
       <Properties>
-        <Property name="text" type="java.lang.String" value="ACTUALIZAR MEMBRESIA"/>
+        <Property name="text" type="java.lang.String" value="ACTUALIZAR ESTADO"/>
       </Properties>
     </Component>
   </SubComponents>
